crates/rust-analyzer/src/diagnostics/snapshots/rust_analyzer__diagnostics__to_proto__tests__snap_rustc_mismatched_type.snap
---
source: crates/rust-analyzer/src/diagnostics/to_proto.rs
expression: diag
---
[
    MappedRustDiagnostic {
        url: "file:///test/runtime/compiler_support.rs",
        diagnostic: Diagnostic {
            range: Range {
                start: Position {
                    line: 47,
                    character: 64,
                },
                end: Position {
                    line: 47,
                    character: 69,
                },
            },
            severity: Some(
                Error,
            ),
            code: Some(
                String(
                    "E0308",
                ),
            ),
            source: Some(
                "rustc",
            ),
            message: "mismatched types\nexpected usize, found u32",
            related_information: None,
            tags: None,
        },
        fixes: [],
    },
]
